--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,16 +1,9 @@
 @import './base.css';
 
-h2:before {
-  top: -0.125rem;
-  left: -0.75rem;
-  border-bottom-color: transparent;
-  border-right-color: transparent;
-}
-h2:after,
-h2:before {
-  content: '';
-  position: absolute;
-  width: 1rem;
-  height: 1rem;
-  border: 0.25rem solid orange;
+h2 {
+  font-size: 2.5rem;
+  margin: 2rem 0 3rem;
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
 }
